--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,6 @@ dotnet_csproj:
 
 build_script:
 - cmd: >-
-    dotnet restore geometry3Sharp_netstandard.csproj
-    dotnet build geometry3Sharp_netstandard.csproj -c Release
-    dotnet pack geometry3Sharp_netstandard.csproj -c Release
+    dotnet restore Foo.sln
+    dotnet build Foo.sln -c Release
 test: on
