--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,4 +13,4 @@ build:
 
 test_script:
 - cmd: >-
-    dotnet test Foo.Test\Foo.Test.csproj -c Release
+    dotnet test --logger:Appveyor Foo.Test\Foo.Test.csproj -c Release 
