Add encrypted GitHub access token to environment

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,10 @@
 version: 1.0.{build}
 image: Visual Studio 2017
 
+environment:
+  access_token:
+    secure: 3Pc4S+ZcBNEiqJDWthe96uDsSJSeW2Rsb1UckEq8Tp/niew5yx8bA3uUYcHaCQ4G
+
 configuration: Release
 platform: Any CPU
 
