Add info to conditional deployment

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,8 +20,10 @@ test_script:
     dotnet test --logger:Appveyor Foo.Test\Foo.Test.csproj -c Release 
 
 deploy:
-  on:
-    branch: master
+  - provider: Environment
+    name: production
+    on:
+      branch: master
 
 deploy_script:
   - git config --global credential.helper store
