--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,4 +34,4 @@ deploy_script:
 
   - git config --global user.name "AppVeyor CI"
 
-  -  git subtree push --prefix=Foo.Lib https://github.com/gregmeess/Foo.Lib.git release
+  -  git subtree push --prefix=Foo.Lib https://github.com/gregmeess/Foo.Lib.git master
